# VCP_Bootloader

./: .mxproject  CMakeLists.txt  DFUtest.ioc  STM32F103CBTx_FLASH.ld  STM32F1xx_Toolchain.cmake
Inc/: globals.h  usb_device.h  usbd_conf.h
Src/: main.c  stm32f1xx_hal_msp.c  usbd_cdc_if.c  usbd_conf.c
libs/CMSIS/: CMakeLists.txt
libs/STM32F1xx/: CMakeLists.txt
libs/STM32F1xx/CMSIS_STM32F1xx/: CMakeLists.txt
libs/STM32F1xx/Include/: device.h
libs/STM32F1xx/STM32F1xx_HAL_Driver/: CMakeLists.txt
libs/STM32F1xx/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_rcc_ex.c
libs/stm32_usb_cdc/: CMakeLists.txt
libs/stm32_usb_core/: CMakeLists.txt
