# CMakeList.txt : CMake project for CMSIS_Device for STM32F1xx include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

set(TARGET		CMSIS_Device)
set(HDR_DIR		Include)

project(${TARGET} C)

# headers are always in include/
file(GLOB_RECURSE HDRS ${HDR_DIR}/*.h)
include_directories(${HDR_DIR})
if(DEVICE STREQUAL STM32F100xB)
    set(SRCS Source/Templates/gcc/startup_stm32f100xb.s)
endif()
if(DEVICE STREQUAL STM32F100xE)
    set(SRCS Source/Templates/gcc/startup_stm32f100xe.s)
endif()
if(DEVICE STREQUAL STM32F101x6)
    set(SRCS Source/Templates/gcc/startup_stm32f101x6.s)
endif()
if(DEVICE STREQUAL STM32F101xB)
    set(SRCS Source/Templates/gcc/startup_stm32f101xb.s)
endif()
if(DEVICE STREQUAL STM32F101xE)
    set(SRCS Source/Templates/gcc/startup_stm32f101xe.s)
endif()
if(DEVICE STREQUAL STM32F101xG)
    set(SRCS Source/Templates/gcc/startup_stm32f101xg.s)
endif()
if(DEVICE STREQUAL STM32F102x6)
    set(SRCS Source/Templates/gcc/startup_stm32f102x6.s)
endif()
if(DEVICE STREQUAL STM32F102xB)
    set(SRCS Source/Templates/gcc/startup_stm32f102xb.s)
endif()
if(DEVICE STREQUAL STM32F103x6)
    set(SRCS Source/Templates/gcc/startup_stm32f103x6.s)
endif()
if(DEVICE STREQUAL STM32F103xB)
    set(SRCS Source/Templates/gcc/startup_stm32f103xb.s)
endif()
if(DEVICE STREQUAL STM32F103xE)
    set(SRCS Source/Templates/gcc/startup_stm32f103xe.s)
endif()
if(DEVICE STREQUAL STM32F103xG)
    set(SRCS Source/Templates/gcc/startup_stm32f103xg.s)
endif()
if(DEVICE STREQUAL STM32F105xC)
    set(SRCS Source/Templates/gcc/startup_stm32f105xc.s)
endif()
if(DEVICE STREQUAL STM32F105xC)
    set(SRCS Source/Templates/gcc/startup_stm32f105xc.s)
endif()

# create library
add_library(${TARGET} STATIC ${HDRS} ${SRCS})
target_include_directories(${TARGET} PUBLIC ${HDR_DIR})